--- a/src/__header.pug
+++ b/src/__header.pug
@@ -55,24 +55,7 @@ mixin header
             //-   i.icon-vk
             //- a(href="#").sOk
             //-   i.icon-ok
-  .mbMenu__outer
-    .mbMenu
-      .mbMenu__itemOuter
-        a.mbMenu__item.mbMenu__mainBtn_JS(href="#")
-          i.icon-list
-          span Главное меню
-      .mbMenu__itemOuter
-        a.mbMenu__item.mbMenu__servBtn_JS(href="#")
-          i.icon-concealer
-          span Услуги
-      .mbMenu__itemOuter
-        a.mbMenu__item.mbMenu__solutionBtn_JS(href="#")
-          i.icon-darts
-          span Решить проблему
-      .mbMenu__itemOuter
-        a.mbMenu__item.mbMenu__searchBtn_JS(href="#")
-          i.icon-search2
-          span Поиск
+  +mbMenu-01-2021
 
 
         
