--- a/src/__menu.pug
+++ b/src/__menu.pug
@@ -170,3 +170,25 @@ mixin onlySolutions
       a(href="") Пигментация
     li
       a(href="") Акне
+
+
+
+mixin mbMenu-01-2021
+  .mbMenu__outer
+    .mbMenu
+      .mbMenu__itemOuter
+        a.mbMenu__item.mbMenu__mainBtn_JS(href="#")
+          i.icon-list
+          span Главное меню
+      .mbMenu__itemOuter
+        a.mbMenu__item.mbMenu__servBtn_JS(href="#")
+          i.icon-concealer
+          span Услуги
+      .mbMenu__itemOuter
+        a.mbMenu__item.mbMenu__solutionBtn_JS(href="#")
+          i.icon-darts
+          span Решить проблему
+      .mbMenu__itemOuter
+        a.mbMenu__item.mbMenu__searchBtn_JS(href="#")
+          i.icon-search2
+          span Поиск
