--- a/src/assets/css/__menu.css
+++ b/src/assets/css/__menu.css
@@ -409,7 +409,8 @@ li.endLeftBlock {
 }
 
 .leftMenu li.lev1.active .lev_a_wrapper .openInner {
-  background: var(--color1);
+  /* background: var(--color1); */
+  background: var(--tc0);
   border-bottom: 1px solid #fff;
 }
 
@@ -438,7 +439,8 @@ li.endLeftBlock {
 }
 
 .leftMenu li.lev1.active .lev_a_wrapper > a {
-  background: var(--color1);
+  /* background: var(--color1); */
+  background: var(--tc0);
   border-bottom: 1px solid #fff;
   color: #fff;
 }
@@ -448,7 +450,8 @@ li.endLeftBlock {
 }
 
 .leftMenu li.lev1.active .lev_a_wrapper > a:hover {
-  background: var(--color1);
+  /* background: var(--color1); */
+  background: var(--tc0);
   border-bottom: 1px solid #fff;
   color: #fff;
 }
@@ -541,18 +544,33 @@ li.endLeftBlock {
 
 .solution__btn {
   background: var(--tc0);
-  padding: 15px 20px;
+  /* padding: 15px 20px; */
+  padding: 0.625rem 2.25rem 0.625rem 0.625rem;
   cursor: pointer;
   white-space: nowrap;
   margin-bottom: 5px;
-  background: var(--color1);
+  /* background: var(--color1); */
+  background: var(--tc0);
   transition: all 0.3s;
   color: #fff;
+  position: relative;
 }
 .solution__btn:hover,
 .solution__btn.active,
 .solution__btn:focus {
   background: var(--tc0);
+}
+
+.solution__btn:after {
+  content: "\e954";
+  font-family: "icomoon";
+  font-size: 1rem;
+  color: #fff;
+  position: absolute;
+  right: 5px;
+  top: 50%;
+  transform: translate3d(0, -50%, 0);
+  z-index: 10;
 }
 
 .solution {
@@ -564,11 +582,36 @@ li.endLeftBlock {
 }
 
 .solution li a {
-  text-decoration: none;
+  /* text-decoration: none;
   padding: 5px 10px;
   display: flex;
   font-size: 1rem;
+  color: var(--tc0); */
+
+  display: block;
+  padding: 0.625rem 0.625rem 0.625rem 1.5rem;
+  text-decoration: none;
+  width: 100%;
+  font-size: 0.875rem;
+  line-height: 1.3;
   color: var(--tc0);
+  background: #fffefe;
+  border-bottom: 1px solid var(--bg2);
+  transition: all 0.3s;
+  position: relative;
+}
+
+.solution li a:before {
+  content: "";
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: var(--tc0);
+  left: 0.625rem;
+  top: 50%;
+  margin-top: -3px;
+  z-index: 10;
 }
 
 .solution li a:hover {
