--- a/src/assets/css/__mbMenu_media.css
+++ b/src/assets/css/__mbMenu_media.css
@@ -8,15 +8,6 @@
 }
 
 @media only screen and (max-width: 1024px) {
-}
-
-@media only screen and (max-width: 920px) {
-}
-
-@media only screen and (max-width: 800px) {
-}
-
-@media only screen and (max-width: 768px) {
   .topMenu__area {
     display: none;
   }
@@ -33,6 +24,31 @@
     width: 100%;
     position: relative;
   }
+}
+
+@media only screen and (max-width: 920px) {
+}
+
+@media only screen and (max-width: 800px) {
+}
+
+@media only screen and (max-width: 768px) {
+  /* .topMenu__area {
+    display: none;
+  }
+  .mbMenu__area {
+    display: block;
+  }
+  .mbMenu__outer {
+    display: block;
+  } */
+  /* .solution {
+    display: block;
+  }
+  .mbMenu__openBoxContentInner {
+    width: 100%;
+    position: relative;
+  } */
 }
 
 @media only screen and (max-width: 600px) {
