--- a/src/assets/css/apps.css
+++ b/src/assets/css/apps.css
@@ -18,6 +18,9 @@
 @import "__header.css";
 @import "__header_media.css";
 
+@import "__header2.css";
+@import "__header2_media.css";
+
 @import "__menu.css";
 @import "__menu_media.css";
 
