--- a/src/leftmenu.pug
+++ b/src/leftmenu.pug
@@ -3,7 +3,8 @@
 - var seoDesc = 'Сео описание для страницы'
 
 include __const
-include __header
+//- include __header
+include __header2
 include __menu
 include __breadcrumbs
 include __wideBlock
@@ -21,7 +22,7 @@ html(lang="ru-RU")
 body
 
   .site__header
-    +header
+    +header2
     +topMenu
 
 
