--- a/src/assets/css/__mbMenu.css
+++ b/src/assets/css/__mbMenu.css
@@ -152,14 +152,16 @@ a.mbMenu__item span {
   position: fixed;
   left: 0;
   width: 100%;
+  max-width: 500px;
+  left: 50%;
   padding: 0 30px;
   /* top: 15vh;
   height: 70vh; */
   /* left: 50%; */
   top: 50%;
   z-index: 500;
-  -webkit-transform: translate3d(0, -50%, 0);
-  transform: translate3d(0, -50%, 0);
+  -webkit-transform: translate3d(-50%, -50%, 0);
+  transform: translate3d(-50%, -50%, 0);
   display: none;
 }
 
@@ -231,7 +233,14 @@ a.mbMenu__item span {
   align-items: center;
   border-radius: 40%;
   background: #d6249f;
-  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
+  background: radial-gradient(
+    circle at 30% 107%,
+    #fdf497 0%,
+    #fdf497 5%,
+    #fd5949 45%,
+    #d6249f 60%,
+    #285aeb 90%
+  );
   margin-right: 10px;
 }
 
