--- a/src/__header3.pug
+++ b/src/__header3.pug
@@ -1,4 +1,4 @@
-mixin header2
+mixin header3
   .topLine2__area.w0
     .topLine2.w1
       .topLine2__address ул. Московская, 117, 2 этаж, ТК "МИР"
@@ -27,7 +27,7 @@ mixin header2
           a.header2__contactsItemLink(href="tel:+78452650500")
             i.icon-phone-call-12
             span +7 (8452) 65-05-00
-      //- .header2__btn Записаться на прием
+      .header2__btn Записаться на прием
           
 
         
