--- a/src/__header2.pug
+++ b/src/__header2.pug
@@ -27,6 +27,9 @@ mixin header2
           a.header2__contactsItemLink(href="tel:+78452650500")
             i.icon-phone-call-12
             span +7 (8452) 65-05-00
+        .header2__contactsItem_mb
+          a.header2__contactsItemLink_mb(href="tel:+78452650500")
+            i.icon-phone-call-12
       //- .header2__btn Записаться на прием
           
 
