--- a/src/assets/css/__header2_media.css
+++ b/src/assets/css/__header2_media.css
@@ -8,6 +8,12 @@
 }
 
 @media only screen and (max-width: 1024px) {
+  .header2__contactsItem {
+    display: none;
+  }
+  .header2__contactsItem_mb {
+    display: block;
+  }
 }
 
 @media only screen and (max-width: 920px) {
@@ -44,6 +50,9 @@
   .header2 {
     padding: 10px 0 0;
   }
+  .header2__contactsItemLink_mb {
+    font-size: 3rem;
+  }
 }
 
 @media only screen and (max-width: 480px) {
@@ -52,6 +61,9 @@
     font-size: 0.875rem;
     padding: 0;
     border-right: none;
+  }
+  .header2__logo {
+    max-width: 90px;
   }
 }
 
