--- a/src/assets/fonts/demo/style.css
+++ b/src/assets/fonts/demo/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?tte8ai');
-  src:  url('fonts/icomoon.eot?tte8ai#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?tte8ai') format('truetype'),
-    url('fonts/icomoon.woff?tte8ai') format('woff'),
-    url('fonts/icomoon.svg?tte8ai#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?jfe80p');
+  src:  url('fonts/icomoon.eot?jfe80p#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?jfe80p') format('truetype'),
+    url('fonts/icomoon.woff?jfe80p') format('woff'),
+    url('fonts/icomoon.svg?jfe80p#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,77 +25,17 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-film:before {
-  content: "\e95b";
+.icon-menu:before {
+  content: "\e95f";
 }
-.icon-phone3:before {
-  content: "\e95c";
+.icon-percentage:before {
+  content: "\e960";
 }
-.icon-phone-hang-up1:before {
-  content: "\e95d";
+.icon-smile:before {
+  content: "\e961";
 }
-.icon-mobile1:before {
-  content: "\e95e";
-}
-.icon-youtube:before {
-  content: "\ea9d";
-}
-.icon-youtube2:before {
-  content: "\ea9e";
-}
-.icon-mobile:before {
-  content: "\e958";
-}
-.icon-tree:before {
-  content: "\e9bc";
-}
-.icon-man:before {
-  content: "\e9dc";
-}
-.icon-woman:before {
-  content: "\e9dd";
-}
-.icon-man-woman:before {
-  content: "\e9de";
-}
-.icon-first:before {
-  content: "\ea21";
-}
-.icon-last:before {
-  content: "\ea22";
-}
-.icon-previous2:before {
-  content: "\ea23";
-}
-.icon-next21:before {
-  content: "\ea24";
-}
-.icon-arrow-up2:before {
-  content: "\ea3a";
-}
-.icon-arrow-right2:before {
-  content: "\ea3c";
-}
-.icon-arrow-down2:before {
-  content: "\ea3e";
-}
-.icon-arrow-left2:before {
-  content: "\ea40";
-}
-.icon-circle-up:before {
-  content: "\ea41";
-}
-.icon-circle-right:before {
-  content: "\ea42";
-}
-.icon-circle-down:before {
-  content: "\ea43";
-}
-.icon-circle-left:before {
-  content: "\ea44";
-}
-.icon-scissors:before {
-  content: "\ea5a";
+.icon-writing:before {
+  content: "\e962";
 }
 .icon-phone-call-12:before {
   content: "\e95a";
@@ -439,7 +379,7 @@
 .icon-list2:before {
   content: "\e9bb";
 }
-.icon-menu:before {
+.icon-menu1:before {
   content: "\e9bd";
 }
 .icon-menu2:before {
@@ -469,7 +409,7 @@
 .icon-star-full:before {
   content: "\e9d9";
 }
-.icon-smile:before {
+.icon-smile1:before {
   content: "\e9e1";
 }
 .icon-smile2:before {
@@ -510,4 +450,76 @@
 }
 .icon-sort-amount-desc:before {
   content: "\ea4d";
+}
+.icon-film:before {
+  content: "\e95b";
+}
+.icon-phone3:before {
+  content: "\e95c";
+}
+.icon-phone-hang-up1:before {
+  content: "\e95d";
+}
+.icon-mobile1:before {
+  content: "\e95e";
+}
+.icon-youtube:before {
+  content: "\ea9d";
+}
+.icon-youtube2:before {
+  content: "\ea9e";
+}
+.icon-mobile:before {
+  content: "\e958";
+}
+.icon-tree:before {
+  content: "\e9bc";
+}
+.icon-man:before {
+  content: "\e9dc";
+}
+.icon-woman:before {
+  content: "\e9dd";
+}
+.icon-man-woman:before {
+  content: "\e9de";
+}
+.icon-first:before {
+  content: "\ea21";
+}
+.icon-last:before {
+  content: "\ea22";
+}
+.icon-previous2:before {
+  content: "\ea23";
+}
+.icon-next21:before {
+  content: "\ea24";
+}
+.icon-arrow-up2:before {
+  content: "\ea3a";
+}
+.icon-arrow-right2:before {
+  content: "\ea3c";
+}
+.icon-arrow-down2:before {
+  content: "\ea3e";
+}
+.icon-arrow-left2:before {
+  content: "\ea40";
+}
+.icon-circle-up:before {
+  content: "\ea41";
+}
+.icon-circle-right:before {
+  content: "\ea42";
+}
+.icon-circle-down:before {
+  content: "\ea43";
+}
+.icon-circle-left:before {
+  content: "\ea44";
+}
+.icon-scissors:before {
+  content: "\ea5a";
 }
