--- a/src/__mainTop.pug
+++ b/src/__mainTop.pug
@@ -10,28 +10,28 @@ mixin mainTop
           .mainTop__menu
             .mainTop__menuItemOuter.mainTop__menuItemOuter_a
               .mainTop__menuItemWrapper
-                a.mainTop__menuItem(href="#")
+                a.mainTop__menuItem.mainTop__menuItem_a(href="#")
                   .mainTop__menuItemTop
                     .mainTop__menuItemTitle Меню
                     i.icon-menu
                   .mainTop__menuItemBottom Информация о нашем Центре
             .mainTop__menuItemOuter.mainTop__menuItemOuter_b
               .mainTop__menuItemWrapper
-                a.mainTop__menuItem(href="#")
+                a.mainTop__menuItem.mainTop__menuItem_b(href="#")
                   .mainTop__menuItemTop
                     .mainTop__menuItemTitle Услуги
                     i.icon-smile
                   .mainTop__menuItemBottom Выбрать нужную услугу нашего Центра
             .mainTop__menuItemOuter.mainTop__menuItemOuter_c
               .mainTop__menuItemWrapper
-                a.mainTop__menuItem(href="#")
+                a.mainTop__menuItem.mainTop__menuItem_c(href="#")
                   .mainTop__menuItemTop
                     .mainTop__menuItemTitle Акции
                     i.icon-percentage
                   .mainTop__menuItemBottom  Информация по акциям нашего Центра
             .mainTop__menuItemOuter.mainTop__menuItemOuter_d
               .mainTop__menuItemWrapper
-                a.mainTop__menuItem(href="#")
+                a.mainTop__menuItem.mainTop__menuItem_d(href="#")
                   .mainTop__menuItemTop
                     .mainTop__menuItemTitle Запись
                     i.icon-writing
