--- a/src/assets/css/__mainTop_media2.css
+++ b/src/assets/css/__mainTop_media2.css
@@ -16,18 +16,18 @@
     width: 100%;
   }
   .mainTop__promo {
-    /* padding: 5px 10px 0; */
+    padding: 5px 10px 0;
   }
   .mainTop__right {
     order: 1;
     width: 100%;
-    /* padding: 0 5px; */
+    padding: 0 5px;
   }
   .mainTop__menuItemOuter {
     position: relative;
     width: 25%;
     height: auto;
-    /* padding: 5px; */
+    padding: 5px;
   }
 
   .mainTop__menuItemWrapper {
@@ -73,9 +73,6 @@
 }
 
 @media only screen and (max-width: 768px) {
-  .mainTop__area {
-    margin-bottom: 5px;
-  }
 }
 
 @media only screen and (max-width: 600px) {
