--- a/src/procedure.pug
+++ b/src/procedure.pug
@@ -12,6 +12,8 @@ include __procedure
 include __forms
 include __footer
 
+include __menuBottom1
+
 
 
 
@@ -41,6 +43,8 @@ body
   +toUp
   
   +formCallBack
+
+  +menuBottom1
 
   +scripts
   
