--- a/src/assets/css/__mainTop2.css
+++ b/src/assets/css/__mainTop2.css
@@ -1,6 +1,5 @@
 .mainTop__area {
   position: relative;
-  margin-bottom: 10px;
 }
 
 .mainTop__outer {
@@ -9,7 +8,7 @@
 
 .mainTop {
   display: flex;
-  /* margin: 0 -10px; */
+  margin: 0 -10px;
 }
 
 .mainTop__left {
@@ -19,7 +18,7 @@
 .mainTop__promo {
   width: 100%;
   position: relative;
-  /* padding: 10px; */
+  padding: 10px;
 }
 
 .mainTop__promo video {
@@ -107,10 +106,10 @@
 
 .mainTop__menuItemWrapper {
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  top: 10px;
+  right: 10px;
+  bottom: 10px;
+  left: 10px;
 }
 
 /* .mainTop__menuItemWrapper_a {
