--- a/src/__menuBottom1.pug
+++ b/src/__menuBottom1.pug
@@ -1,10 +1,11 @@
 mixin menuBottom1
+  .menuBottom1__areaFake
   .menuBottom1__area.menuBottom1__area_main
     .menuBottom1__outer
       .menuBottom1
         .menuBottom1__itemArea
           .menuBottom1__itemContent
-          .menuBottom1__item.mColor1
+          .menuBottom1__item.mColor1(data-id="menu1")
             i.icon-menu
             span Меню
         .menuBottom1__itemArea
@@ -17,11 +18,11 @@ mixin menuBottom1
           .menuBottom1__item.mColor3
             i.icon-question-round
             span Проблемы
-        .menuBottom1__itemArea
-          .menuBottom1__itemContent
-          .menuBottom1__item.mColor4
-            i.icon-writing
-            span Запись
+        //- .menuBottom1__itemArea
+        //-   .menuBottom1__itemContent
+        //-   .menuBottom1__item.mColor4
+        //-     i.icon-writing
+        //-     span Запись
         .menuBottom1__itemArea
           .menuBottom1__itemContent
           .menuBottom1__item.mColor5
