--- a/src/__header3.pug
+++ b/src/__header3.pug
@@ -20,12 +20,12 @@ mixin header3
         .header2__contactsItem
           .header2__contactsItemTitle Центр косметологии:
           a.header2__contactsItemLink(href="tel:+78452260000")
-            i.icon-phone-call-12
+            i.icon-phone2
             span +7 (8452) 26-00-00
         .header2__contactsItem
           .header2__contactsItemTitle Запись на прием:
           a.header2__contactsItemLink(href="tel:+78452650500")
-            i.icon-phone-call-12
+            i.icon-phone2
             span +7 (8452) 65-05-00
       .header2__btn Записаться на прием
           
