--- a/src/assets/css/__menuBottom1.css
+++ b/src/assets/css/__menuBottom1.css
@@ -1,15 +1,19 @@
 .menuBottom1__area {
   position: fixed;
   left: 0;
-  bottom: 0;
+  top: 0;
   right: 0;
   background: #aba299;
   z-index: 2000;
+  transition: all 0.5s;
 }
 
 .menuBottom1__area_main {
-  bottom: -200px;
-  transition: all 0.3s;
+  top: -200px;
+}
+
+.menuBottom1__area_active {
+  top: 0;
 }
 
 .menuBottom1__outer {
@@ -22,7 +26,7 @@
 }
 
 .menuBottom1__itemArea {
-  width: 20%;
+  width: 25%;
 }
 
 .menuBottom1__itemContent {
