--- a/src/assets/css/apps.css
+++ b/src/assets/css/apps.css
@@ -84,8 +84,8 @@
 @import "__index2.css";
 @import "__index2_media.css";
 
-@import "__mainTop.css";
-@import "__mainTop_media.css";
+@import "__mainTop2.css";
+@import "__mainTop2_media.css";
 
 @import "__mainProblem.css";
 @import "__mainProblem_media.css";
