--- a/src/assets/css/media.css
+++ b/src/assets/css/media.css
@@ -45,6 +45,10 @@
     position: relative;
     padding: 0 0 10px;
   } */
+  .site__center {
+    position: relative;
+    padding: 5px 0 15px;
+  }
 }
 
 @media only screen and (max-width: 400px) {
