--- a/src/assets/css/xandercode.css
+++ b/src/assets/css/xandercode.css
@@ -115,14 +115,7 @@ a.hover {
   line-height: 250px;
   vertical-align: middle;
   background: #d6249f;
-  background: radial-gradient(
-    circle at 30% 107%,
-    #fdf497 0%,
-    #fdf497 5%,
-    #fd5949 45%,
-    #d6249f 60%,
-    #285aeb 90%
-  );
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25);
 }
 
@@ -138,6 +131,23 @@ a.hover {
 }
 
 .xScroll::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background-color: var(--tc0);
+}
+
+.xScroll2::-webkit-scrollbar-track {
+  border-radius: 8px;
+  background-color: transparent;
+}
+
+.xScroll2::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.5rem;
+  /* background-color: var(--colorLightGrey); */
+  background-color: transparent;
+}
+
+.xScroll2::-webkit-scrollbar-thumb {
   border-radius: 8px;
   background-color: var(--tc0);
 }
