--- a/src/assets/fonts/demo/style.css
+++ b/src/assets/fonts/demo/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?g9a2iy');
-  src:  url('fonts/icomoon.eot?g9a2iy#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?g9a2iy') format('truetype'),
-    url('fonts/icomoon.woff?g9a2iy') format('woff'),
-    url('fonts/icomoon.svg?g9a2iy#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?hebcf1');
+  src:  url('fonts/icomoon.eot?hebcf1#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?hebcf1') format('truetype'),
+    url('fonts/icomoon.woff?hebcf1') format('woff'),
+    url('fonts/icomoon.svg?hebcf1#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,11 +25,23 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-close2021:before {
+  content: "\e906";
+}
+.icon-followers:before {
+  content: "\e900";
+}
+.icon-shopping-bag:before {
+  content: "\e902";
+}
+.icon-shopping-cart:before {
+  content: "\e904";
+}
+.icon-user:before {
+  content: "\e905";
+}
 .icon-question-round:before {
   content: "\e969";
-}
-.icon-bulb:before {
-  content: "\e963";
 }
 .icon-idea:before {
   content: "\e964";
@@ -61,12 +73,6 @@
 .icon-phone-call-12:before {
   content: "\e95a";
 }
-.icon-concealer:before {
-  content: "\e956";
-}
-.icon-darts:before {
-  content: "\e957";
-}
 .icon-list:before {
   content: "\e959";
 }
@@ -94,38 +100,11 @@
 .icon-bag:before {
   content: "\e94c";
 }
-.icon-left-end-arrow2:before {
-  content: "\e94a";
-}
-.icon-right-end-arrow2:before {
-  content: "\e94b";
-}
 .icon-left-end-arrow:before {
   content: "\e948";
 }
 .icon-right-end-arrow:before {
   content: "\e949";
-}
-.icon-left-and-right-arrow:before {
-  content: "\e904";
-}
-.icon-left-and-right-arrows:before {
-  content: "\e905";
-}
-.icon-left-and-right-arrows2:before {
-  content: "\e906";
-}
-.icon-right-and-left-straight-arrows:before {
-  content: "\e946";
-}
-.icon-transfer:before {
-  content: "\e947";
-}
-.icon-brand:before {
-  content: "\e900";
-}
-.icon-flyers:before {
-  content: "\e902";
 }
 .icon-down:before {
   content: "\e901";
@@ -184,20 +163,8 @@
 .icon-vk:before {
   content: "\e917";
 }
-.icon-phone1:before {
-  content: "\e918";
-}
-.icon-filter:before {
-  content: "\e919";
-}
 .icon-plus:before {
   content: "\e91a";
-}
-.icon-search:before {
-  content: "\e91b";
-}
-.icon-telegram:before {
-  content: "\e91c";
 }
 .icon-viber:before {
   content: "\e91d";
@@ -220,21 +187,6 @@
 .icon-twitter-bird-logo:before {
   content: "\e923";
 }
-.icon-phone-call2:before {
-  content: "\e924";
-}
-.icon-avatar:before {
-  content: "\e925";
-}
-.icon-profile:before {
-  content: "\e926";
-}
-.icon-ruler:before {
-  content: "\e927";
-}
-.icon-shopping-cart2:before {
-  content: "\e928";
-}
 .icon-circular-wall-clock:before {
   content: "\e929";
 }
@@ -244,7 +196,7 @@
 .icon-close:before {
   content: "\e92b";
 }
-.icon-shopping-cart:before {
+.icon-shopping-cart1:before {
   content: "\e92c";
 }
 .icon-youtube-logo:before {
@@ -262,39 +214,6 @@
 .icon-eye:before {
   content: "\e931";
 }
-.icon-home:before {
-  content: "\e932";
-}
-.icon-camera:before {
-  content: "\e933";
-}
-.icon-file-text:before {
-  content: "\e934";
-}
-.icon-profile1:before {
-  content: "\e935";
-}
-.icon-files-empty:before {
-  content: "\e936";
-}
-.icon-file-play:before {
-  content: "\e937";
-}
-.icon-file-video:before {
-  content: "\e938";
-}
-.icon-copy:before {
-  content: "\e939";
-}
-.icon-filter2:before {
-  content: "\e93a";
-}
-.icon-filter3:before {
-  content: "\e93b";
-}
-.icon-sort:before {
-  content: "\e93c";
-}
 .icon-sort2:before {
   content: "\e93d";
 }
@@ -303,12 +222,6 @@
 }
 .icon-qrcode:before {
   content: "\e93f";
-}
-.icon-image:before {
-  content: "\e940";
-}
-.icon-images:before {
-  content: "\e941";
 }
 .icon-connection:before {
   content: "\e942";
@@ -322,95 +235,11 @@
 .icon-phone-hang-up:before {
   content: "\e945";
 }
-.icon-history:before {
-  content: "\e94d";
-}
-.icon-clock:before {
-  content: "\e94e";
-}
-.icon-bubble2:before {
-  content: "\e96e";
-}
-.icon-bubbles3:before {
-  content: "\e96f";
-}
-.icon-bubbles4:before {
-  content: "\e970";
-}
-.icon-lock:before {
-  content: "\e98f";
-}
-.icon-unlocked:before {
-  content: "\e990";
-}
-.icon-equalizer:before {
-  content: "\e992";
-}
-.icon-equalizer2:before {
-  content: "\e993";
-}
-.icon-cog:before {
-  content: "\e994";
-}
-.icon-cogs:before {
-  content: "\e995";
-}
-.icon-bug:before {
-  content: "\e999";
-}
-.icon-stats-bars:before {
-  content: "\e99c";
-}
-.icon-gift:before {
-  content: "\e99f";
-}
-.icon-leaf:before {
-  content: "\e9a4";
-}
-.icon-rocket:before {
-  content: "\e9a5";
-}
 .icon-fire:before {
   content: "\e9a9";
 }
-.icon-bin:before {
-  content: "\e9ac";
-}
-.icon-bin2:before {
-  content: "\e9ad";
-}
-.icon-airplane:before {
-  content: "\e9af";
-}
-.icon-truck:before {
-  content: "\e9b0";
-}
 .icon-accessibility:before {
   content: "\e9b2";
-}
-.icon-clipboard:before {
-  content: "\e9b8";
-}
-.icon-list-numbered:before {
-  content: "\e9b9";
-}
-.icon-list1:before {
-  content: "\e9ba";
-}
-.icon-list2:before {
-  content: "\e9bb";
-}
-.icon-menu1:before {
-  content: "\e9bd";
-}
-.icon-menu2:before {
-  content: "\e9be";
-}
-.icon-menu3:before {
-  content: "\e9bf";
-}
-.icon-menu4:before {
-  content: "\e9c0";
 }
 .icon-sun:before {
   content: "\e9d4";
@@ -451,9 +280,6 @@
 .icon-exit:before {
   content: "\ea14";
 }
-.icon-tab:before {
-  content: "\ea45";
-}
 .icon-move-up:before {
   content: "\ea46";
 }
@@ -474,12 +300,6 @@
 }
 .icon-film:before {
   content: "\e95b";
-}
-.icon-phone3:before {
-  content: "\e95c";
-}
-.icon-phone-hang-up1:before {
-  content: "\e95d";
 }
 .icon-mobile1:before {
   content: "\e95e";
